# Funko_Pop_Watcher

./: .gitignore  README.rst  init-monitor.sh  pop_bot.py  pops.json  profile.json  requirements.txt  setup.cfg  setup.py  tox-requirements.txt  tox.ini  vaultedInfo.txt
examples/: pop_watch.yaml  pop_watch_windows.yml
popwatch/: autoCheckout.py  barnesNobleCheckout.py  blizzardCheckout.py  config.py  funimationCheckout.py  geminiCheckout.py  hotboxCheckout.py  initDriver.py  popProfiles.py  storeStock.py  targetCheckout.py  telegram_utils.py  walmartCheckout.py
