[metadata]
name = funko_pop_watcher
summary = Funko Pop Watcher
description-file =
    README.rst
author = Jack Garcia
author-email = rexysmydog@gmail.com
home-page = https://github.com/LumbaJack/Funko_Pop_Watcher

[files]
packages=
    popwatch

[tool:wheel]
universal = 1

[flake8]
exclude =
    venv,
    .tox,
    .git,
    __pycache__,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    scripts/*
max-line-length = 119

[tool:pytest]
testpaths=tests
ignore=
    .tox
    .cache
    docs
    exmaples/pop_watch.yaml
    venv

[coverage:run]
omit=
    exmaples/pop_watch.yaml
